# oabnew

./: .gitignore  CMakeLists.txt  Makefile  README.md  kill.sh  oabnew  oabnew.c  oabnew.ini
include/: httpd.h  utils.h
lib/: libiniparser.so.0
libs/slog/inc/: slog.h
src/: httpd.c  oabnew.c  slog.c
